# cs5330-assignments

./: README.md  cs5330-assignments.code-workspace
assignments/: README.md  pyproject.toml  requirements.txt
assignments/scripts/: cleanup.cmd  cleanup.sh
assignments/src/: main.py
assignments/src/al5/: main.py
assignments/src/al6/: main.py
assignments/src/al7/: main.py
assignments/src/al8/: main.py
assignments/src/al9/: main.py
assignments/src/core/: image_utils.py  path_utils.py
assignments/src/hw1/: __init__.py  histogram_equalisation.py  image_coloring.py
assignments/src/hw2/: __init__.py  edges_detection.py  visualizing_bluring.py
assignments/src/hw3/: main.py
assignments/src/hw4/: notebook.ipynb
assignments/src/lab2/: main.py
assignments/src/lab3/: main.py
assignments/src/lab4/: main.py
assignments/src/lab5/: main.py
assignments/src/lab6/: main.py
assignments/src/lab7/: main.py
face_recognition/: README.md  lab-description.md  pyproject.toml  requirements.txt
face_recognition/src/: main.py
face_recognition/src/core/: detector.py  utils.py
face_recognition/src/gui/: image_tab.py  webcam_tab.py  window.py
labs/: README.md
labs/src/: main.py
labs/src/al2/: main.py
labs/src/al3/: main.py
labs/src/al4/: main.py
labs/src/core/: path_utils.py
labs/src/lab1/: main.py
labs/src/lab3/: main.py
